--- a/homework.html
+++ b/homework.html
@@ -59,10 +59,9 @@
         
         <div class="card bg-green">
             <h2 class="PodSagol-Cards">Контакты</h2>
-                 <ul class="contacts">
-                    <li><a href="https://t.me/dumahuch" target="_blank">Душнильная</a><form action="/" class="form"></li>
-                    <li><a href="https://www.instagram.com/dumahuch/" target="_blank">Здесь можно глянуть на котов</a><form action="/" class="form"></li>
-                    <li><a href="https://www.flickr.com/photos/190950414@N08/" target="_blank">Здесь тоже можно увдеть моё хобби</a><form action="/" class="form"></form></li>
+                    <p class="contacts"><a href="https://t.me/dumahuch" target="_blank">Душнильная</a></p>
+                    <p class="contacts"><a href="https://www.instagram.com/dumahuch/" target="_blank">Здесь можно глянуть на котов</a></p>
+                    <p class="contacts"><a href="https://www.flickr.com/photos/190950414@N08/" target="_blank">Здесь тоже можно увдеть моё хобби</a></p>
          </div>   
          
          <h3>Заниматься планирую каждый день. Главное чтобы запал не пропал. Суточная работа даёт достаточно свободного времени.</h3>
